--- a/task.html
+++ b/task.html
@@ -5,18 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
+    
 </head>
-<body>
+<body bgcolor="teal">
 
-    <h2>Image Maps</h2>
-
-<img src="./assets/img/Table.jpg" alt="Table" usemap="#table" width="600" height="450">
-
-<map name="table">
-  <area shape="rect" coords="160,64,430,323" alt="Computer" href="./assets/img/Computer.jpg">
-  <area shape="circle" coords="502,338,47" alt="Coffee" href="./assets/img/Coffee.jpg">
-  <area shape="poly" coords="22,269,110,237,157,372,69,403" alt="Ipad" href="./assets/img/Ipad.jpg">
-</map>
+  <table >
+    <tbody>
+    <tr>
+      <td width="120">
+        <img width="100" src="./assets/img/BobbyFischer400x400_7.jpg" alt="BobbyFischer ">
+      </td>
+      <td>
+        <h5>Robert</h5>
+        <h3> <span style="color: orange;">James</span> Fischer</h3>
+        <h6>The Best Player</h6>
+      </td>
+    </tr>
+    
+    <tr>
+      <td></td>
+      <td><h2>Location</h2></td>
+      <td><h2>Ranking</h2></td>
+      <td><h2>Email</h2></td>
+      <td><h2>Website</h2></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><h6>Iceland</h6></td>
+      <td><h6>2785</h6></td>
+      <td><h6>2785</h6></td>
+      <td><h6>2785</h6></td>
+    </tr>
+    <tr>
+      <td><h2>Entry</h2></td>
+      <td colspan="4"><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eligendi cupiditate tenetur nisi iste illo ea odit alias architecto cumque voluptates, fuga rem illum commodi, accusantium non fugit repellendus hic.</h6></td>
+    </tr>
+    <tr>
+      <td><h6>2785</h6></td>
+      <td colspan="4"><h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero neque dignissimos molestiae recusandae vitae sint numquam ipsam modi ex commodi dolor iste dolores rem, voluptatem, facilis temporibus? Magnam, neque expedita!</h6></td>
+    </tr>
+    <tr>
+      <td><h2>Expensive</h2></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+    </tr>
+    <tr>
+      <td><h6>2785</h6></td>
+      <td colspan="2"><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, excepturi cum. Ad odio ut illum aliquid animi incidunt dolorum in laudantium vel architecto voluptates nostrum dolorem temporibus minima est debitis obcaecati accusamus voluptatum eveniet, molestias odit, natus eius deserunt consequuntur! Nesciunt aspernatur fugiat maxime placeat reiciendis porro nisi incidunt, architecto quidem consequuntur, reprehenderit vero expedita eveniet id sit quo blanditiis, illo fuga ipsam quos error. Nihil sapiente porro corporis aspernatur possimus quos nam cum corrupti, saepe aliquid quae iure, facilis illum similique fuga pariatur voluptas voluptatem, eveniet distinctio assumenda animi blanditiis ipsum aperiam! Quibusdam nemo iusto dolorum cum a pariatur?.</h6></td>
+      <td colspan="2"><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius provident quo minus ipsum culpa mollitia ullam debitis nostrum labore ex maiores iste necessitatibus, rerum ea odio corporis, esse eos dolorum nesciunt tempora enim. Officiis ea numquam delectus? Nam quam laboriosam dolores impedit labore! Assumenda, non dolorum cupiditate minus id quaerat nesciunt corporis dolorem fugiat reiciendis sit quasi ut rem, dicta qui sapiente totam expedita tempora, nobis blanditiis natus consequatur vero. In cupiditate laudantium a fugiat ratione officiis rerum, dolore id enim voluptates qui libero officia! Ab explicabo recusandae repudiandae accusantium voluptas et. Eveniet distinctio vel blanditiis! Culpa veritatis ullam dolorem!</h6></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, excepturi cum. Ad odio ut illum aliquid animi incidunt dolorum in laudantium vel architecto voluptates nostrum dolorem temporibus minima est debitis obcaecati accusamus voluptatum eveniet, molestias odit, natus eius deserunt consequuntur! Nesciunt aspernatur fugiat maxime placeat reiciendis porro nisi incidunt, architecto quidem consequuntur, reprehenderit vero expedita eveniet id sit quo blanditiis, illo fuga ipsam quos error. Nihil sapiente porro corporis aspernatur possimus quos nam cum corrupti, saepe aliquid quae iure, facilis illum similique fuga pariatur voluptas voluptatem, eveniet distinctio assumenda animi blanditiis ipsum aperiam! Quibusdam nemo iusto dolorum cum a pariatur?.</h6></td>
+      <td colspan="2"><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius provident quo minus ipsum culpa mollitia ullam debitis nostrum labore ex maiores iste necessitatibus, rerum ea odio corporis, esse eos dolorum nesciunt tempora enim. Officiis ea numquam delectus? Nam quam laboriosam dolores impedit labore! Assumenda, non dolorum cupiditate minus id quaerat nesciunt corporis dolorem fugiat reiciendis sit quasi ut rem, dicta qui sapiente totam expedita tempora, nobis blanditiis natus consequatur vero. In cupiditate laudantium a fugiat ratione officiis rerum, dolore id enim voluptates qui libero officia! Ab explicabo recusandae repudiandae accusantium voluptas et. Eveniet distinctio vel blanditiis! Culpa veritatis ullam dolorem!</h6></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+      <td colspan="2"><h1><span style="color: orange;">01.</span>London System</h1></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="2"><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, excepturi cum. Ad odio ut illum aliquid animi incidunt dolorum in laudantium vel architecto voluptates nostrum dolorem temporibus minima est debitis obcaecati accusamus voluptatum eveniet, molestias odit, natus eius deserunt consequuntur! Nesciunt aspernatur fugiat maxime placeat reiciendis porro nisi incidunt, architecto quidem consequuntur, reprehenderit vero expedita eveniet id sit quo blanditiis, illo fuga ipsam quos error. Nihil sapiente porro corporis aspernatur possimus quos nam cum corrupti, saepe aliquid quae iure, facilis illum similique fuga pariatur voluptas voluptatem, eveniet distinctio assumenda animi blanditiis ipsum aperiam! Quibusdam nemo iusto dolorum cum a pariatur?.</h6></td>
+      <td colspan="2"><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius provident quo minus ipsum culpa mollitia ullam debitis nostrum labore ex maiores iste necessitatibus, rerum ea odio corporis, esse eos dolorum nesciunt tempora enim. Officiis ea numquam delectus? Nam quam laboriosam dolores impedit labore! Assumenda, non dolorum cupiditate minus id quaerat nesciunt corporis dolorem fugiat reiciendis sit quasi ut rem, dicta qui sapiente totam expedita tempora, nobis blanditiis natus consequatur vero. In cupiditate laudantium a fugiat ratione officiis rerum, dolore id enim voluptates qui libero officia! Ab explicabo recusandae repudiandae accusantium voluptas et. Eveniet distinctio vel blanditiis! Culpa veritatis ullam dolorem!</h6></td>
+    </tr>
+  </table>
+</tbody>
 
 </body>
 </html>
