--- a/test.html
+++ b/test.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-    
+    <!-- <h2>Image Maps</h2>
+
+<img src="./assets/img/Table.jpg" alt="Table" usemap="#table" width="600" height="450">
+
+<map name="table">
+  <area shape="rect" coords="160,64,430,323" alt="Computer" href="./assets/img/Computer.jpg">
+  <area shape="circle" coords="502,338,47" alt="Coffee" href="./assets/img/Coffee.jpg">
+  <area shape="poly" coords="22,269,110,237,157,372,69,403" alt="Ipad" href="./assets/img/Ipad.jpg">
+</map> -->  
+
 
     <!-- <header>
         <nav>
