--- a/Tasks/index.html
+++ b/Tasks/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 2</title>
     <script src="https://kit.fontawesome.com/5643fa62d3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/index99.css">
+    <link rel="stylesheet" href="./Tasks/assets/css/index.css">
 </head>
 
 <body>
