--- a/Html Css/JavaScript/Inputs/exam.html
+++ b/Html Css/JavaScript/Inputs/exam.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="./js/script6.js"></script>
+    <script defer src="../Inputs/js/exam.js"></script>
 </head>
 <body>
     
