--- a/Html Css/JavaScript/Inputs/index5.html
+++ b/Html Css/JavaScript/Inputs/index5.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="./js/script5.js"></script>
+    <link rel="stylesheet" href="./index5.css">
+    
 </head>
 <body>
-    
+
+    <div class="box">
+        <div class="slide"><button class="number">1</button></div>
+        <div class="slide"><button class="number">2</button></div>
+        <div class="slide"><button class="number">3</button></div>
+        <div class="slide"><button class="number">4</button></div>
+        <div class="slide"><button class="number">5</button></div>
+        <div class="slide"><button class="number">1</button></div>
+    </div>
+
+    <button class="btn next-btn">></button>
+    <button class="btn prev-btn"><</button>
+    <script defer src="./js/script5.js"></script>
 </body>
-</html>l
+</html>
