--- a/Html Css/JavaScript/Inputs/index7.html
+++ b/Html Css/JavaScript/Inputs/index7.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index3.css">
-    <script defer src="./js/script3.js"></script>
+    <link rel="stylesheet" href="index7.css">
+    <script defer src="./js/script7.js"></script>
 </head>
 <body>
     
@@ -18,9 +18,12 @@
             <i class="box__icon-success"></i>
         </div>
         <div class="box__title">
-            <h1 class="box__title-text">You work has been save</h1>
+            <h1 class="box__title-text">Save your characters</h1>
             <button class="btn">
-                <p class="btn-text">OK</p>
+                <p class="btn-text">Save</p>
+            </button>
+            <button class="btn1">
+                <p class="btn-text2">Cancel</p>
             </button>
         </div>
     </section>
@@ -33,7 +36,11 @@
             <i class="box__icon-success"></i>
         </div>
         <div class="box__title">
-            <h1 class="box__title-text">Success</h1>
+            <h1 class="box__title-text">Choose your name</h1>
+            <input type="text" name="name" id="name">
+            <button class="btn2">
+                <p class="btn-text2">Cancel</p>
+            </button>
         </div>
     </section>
 
