--- a/Html Css/JavaScript/Inputs/index8.html
+++ b/Html Css/JavaScript/Inputs/index8.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index2.css">
-    <script defer src="./js/script2.js"></script>
+    <link rel="stylesheet" href="index8.css">
+    <script defer src="./js/script8.js"></script>
 </head>
 <body>
     
@@ -18,14 +18,24 @@
             <i class="box__icon-success"></i>
         </div>
         <div class="box__title">
-            <div class="box__title-text">300x150</div>
+            <h1 class="box__title-text">You work has been save</h1>
             <button class="btn">
-                <p class="btn-text">Close</p>
+                <p class="btn-text">OK</p>
             </button>
         </div>
     </section>
 
-
+    <section class="box2 hidden">
+        <div class="box__btn">
+            <button class="btn-close2">⨉</button>
+        </div>
+        <div class="box__icon">
+            <i class="box__icon-success"></i>
+        </div>
+        <div class="box__title">
+            <h1 class="box__title-text">Oops...</h1>
+        </div>
+    </section>
 
     <div class="overlay hidden"></div>
     <button class="btn-open">Open Box</button>
