--- a/Html Css/JavaScript/Inputs/index4.html
+++ b/Html Css/JavaScript/Inputs/index4.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index4.css">
     <script defer src="./js/script4.js"></script>
 </head>
 <body>
-    
+  <section>
+    <div class="slider">
+        <div class="slide"><h3>1</h3></div>
+        <div class="slide"><h3>2</h3></div>
+        <div class="slide"><h3>3</h3></div>
+        <div class="slide"><h3>4</h3></div>
+        <div class="slide"><h3>5</h3></div>
+        <div class="slide"><h3>6</h3></div>
+        <div class="slide"><h3>7</h3></div>
+        <div class="slide"><h3>8</h3></div>
+        <div class="slide"><h3>9</h3></div>
+        <div class="slide"><h3>10</h3></div>
+        <div class="slide"><h3>11</h3></div>
+        <div class="slide"><h3>12</h3></div>
+    </div>
+     <div class="btn">
+    <button class="btn__next">></button>
+    <button class="btn__prev"><</div>
+</div>
+<div class="pagination"></div>
+</section>
+   </body>
 </body>
 </html>
