--- a/Html Css/JavaScript/Inputs/index2.html
+++ b/Html Css/JavaScript/Inputs/index2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <section class="box hidden">
+    <section class="box">
         <div class="box__btn">
             <button class="btn-close">⨉</button>
         </div>
@@ -24,7 +24,7 @@
             </button>
         </div>
     </section>
-
+    
 
 
     <div class="overlay hidden"></div>
