--- a/Html Css/CozaStore/contact.html
+++ b/Html Css/CozaStore/contact.html
@@ -25,20 +25,24 @@
             <div class="logo">
                 <a href="#"><img src="./img/logo-01.png.webp" alt="logo"></a>
             </div>
-            <nav class="nav">
-                <ul class="nav__lists">
-                    <li class="nav__lists-info"><a href="./home.html" class="nav__lists-info">Home</a></li>
-                    <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
-                    <li class="nav__lists-info"><a href="./about.html" class="nav__lists-info">About</a></li>
-                    <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info" id="nav__lists-info">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="header__icons">
-                <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+            <div class="header__items">
+                <nav class="nav">
+                    <ul class="nav__lists">
+                        <li class="nav__lists-info"><a href="./home.html" class="nav__lists-info">Home</a></li>
+                        <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
+                        <li class="nav__lists-info"><a href="./about.html" class="nav__lists-info">About</a></li>
+                        <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info"
+                                id="nav__lists-info">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__icons">
+                    <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+                </div>
             </div>
+
         </div>
 
     </header>
