--- a/Html Css/CozaStore/home.html
+++ b/Html Css/CozaStore/home.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozastore</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/home.css">
     <script src="https://kit.fontawesome.com/5643fa62d3.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <style>
         .slide-in-bottom3 {
             animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) both
@@ -152,19 +155,23 @@
             <div class="logo">
                 <a href="#"><img src="./img/logo-01.png.webp" alt="logo"></a>
             </div>
-            <nav class="nav">
-                <ul class="nav__lists">
-                    <li class="nav__lists-info"><a href="#" class="nav__lists-info" id="nav__lists-info">Home</a></li>
-                    <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
-                    <li class="nav__lists-info"><a href="./about.html" class="nav__lists-info">About</a></li>
-                    <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="header__icons">
-                <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+            <div class="header__items">
+                <nav class="nav">
+                    <ul class="nav__lists">
+                        <li class="nav__lists-info"><a href="#" class="nav__lists-info" id="nav__lists-info">Home</a>
+                        </li>
+                        <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
+                        <li class="nav__lists-info"><a href="./about.html" class="nav__lists-info">About</a></li>
+                        <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header__icons">
+                    <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+                </div>
             </div>
+
         </div>
 
     </header>
@@ -265,12 +272,36 @@
             <div class="shopBag__overlay"></div>
         </section>
         <section class="boxes">
-            <div class="box">
-                <img src="./img/banner-01.jpg.webp" alt="" class="box__image">
-                <a class="box__info" href="#">
+            <div class="box box2">
+                <img src="./img/banner-01.jpg.webp" alt="" class="box__image box__image2">
+                <a class="box__info box__info2" href="./shop.html">
                     <div class="box__info-text">
                         <h1 class="box__title">Women</h1>
                         <p class="box__text">Spring 2018</p>
+                    </div>
+                    <div class="box__info-text2 box2__info-text2">
+                        <p class="box__text2 scale-in-center1">SHOP NOW</p>
+                    </div>
+                </a>
+            </div>
+            <div class="box box2">
+                <img src="./img/banner-02.jpg.webp" alt="" class="box__image box__image2">
+                <a class="box__info box__info2" href="./shop.html">
+                    <div class="box__info-text">
+                        <h1 class="box__title">Men</h1>
+                        <p class="box__text">Spring 2018</p>
+                    </div>
+                    <div class="box__info-text2 box2__info-text2">
+                        <p class="box__text2 scale-in-center1">SHOP NOW</p>
+                    </div>
+                </a>
+            </div>
+            <div class="box">
+                <img src="./img/banner-07.jpg.webp" alt="" class="box__image">
+                <a class="box__info" href="./shop.html">
+                    <div class="box__info-text">
+                        <h1 class="box__title">Watches</h1>
+                        <p class="box__text">New Trend</p>
                     </div>
                     <div class="box__info-text2">
                         <p class="box__text2 scale-in-center1">SHOP NOW</p>
@@ -278,11 +309,11 @@
                 </a>
             </div>
             <div class="box">
-                <img src="./img/banner-02.jpg.webp" alt="" class="box__image">
-                <a class="box__info" href="#">
+                <img src="./img/banner-08.jpg.webp" alt="" class="box__image">
+                <a class="box__info" href="./shop.html">
                     <div class="box__info-text">
-                        <h1 class="box__title">Men</h1>
-                        <p class="box__text">Spring 2018</p>
+                        <h1 class="box__title">Bags</h1>
+                        <p class="box__text">New Trend</p>
                     </div>
                     <div class="box__info-text2">
                         <p class="box__text2 scale-in-center1">SHOP NOW</p>
@@ -291,7 +322,7 @@
             </div>
             <div class="box">
                 <img src="./img/banner-03.jpg.webp" alt="" class="box__image">
-                <a class="box__info" href="#">
+                <a class="box__info" href="./shop.html">
                     <div class="box__info-text">
                         <h1 class="box__title">Accessories</h1>
                         <p class="box__text">New Trend</p>
@@ -301,6 +332,7 @@
                     </div>
                 </a>
             </div>
+
         </section>
 
         <section class="product">
@@ -450,20 +482,55 @@
         </section>
     </main>
 
-    <!-- <div class="pop">
-        <div class="pop__slider">
-            <div class="pop__slider-image">
-                <img src="./img/product-detail-01.jpg.webp" alt="">
-            </div>
-            <div class="pop__slider-image">
-                <img src="./img/product-detail-02.jpg.webp" alt="">
-            </div>
-            <div class="pop__slider-image">
-                <img src="./img/product-detail-03.jpg.webp" alt="">
+    <div class="pop hidden">
+        <div class="pop__swiper">
+            <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="parallax-bg" style="
+                    background-image: url(https://preview.colorlib.com/theme/cozastore/images/product-detail-01.jpg);"
+                            data-swiper-parallax="-23%"></div>
+                        <div class="title" data-swiper-parallax="-300">Man Collection</div>
+                        <div class="subtitle" data-swiper-parallax="-200">Spring 2018</div>
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>
+                                Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg" style="
+                  background-image: url(https://preview.colorlib.com/theme/cozastore/images/product-05.jpg);
+                " data-swiper-parallax="-23%"></div>
+                        <div class="title" data-swiper-parallax="-300">New Season</div>
+                        <div class="subtitle" data-swiper-parallax="-200">New Trend</div>
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>
+                                Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg" style="
+                  background-image: url(https://preview.colorlib.com/theme/cozastore/images/banner-02.jpg.webp);
+                " data-swiper-parallax="-23%"></div>
+                        <div class="title" data-swiper-parallax="-300">Accessories</div>
+                        <div class="subtitle" data-swiper-parallax="-200">New arrivals</div>
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>
+                                Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.
+                            </p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
-    <div class="pop__overlay"></div> -->
+    <div class="pop__overlay hidden"></div>
 
 
     <footer>
@@ -516,6 +583,21 @@
         let loader = document.querySelector('.loader')
         window.addEventListener("load", () => {
             loader.style.display = 'none'
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            speed: 600,
+            parallax: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
         });
     </script>
 </body>
