--- a/Html Css/CozaStore/about.html
+++ b/Html Css/CozaStore/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <div class="loader">
         <img src="./loading/Infinity-1.3s-200px (1).svg" alt="" srcset="">
     </div>
@@ -24,19 +24,23 @@
             <div class="logo">
                 <a href="#"><img src="./img/logo-01.png.webp" alt="logo"></a>
             </div>
-            <nav class="nav">
-                <ul class="nav__lists">
-                    <li class="nav__lists-info"><a href="./home.html" class="nav__lists-info">Home</a></li>
-                    <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
-                    <li class="nav__lists-info"><a href="#" class="nav__lists-info" id="nav__lists-info">About</a></li>
-                    <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="header__icons">
-                <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+            <div class="header__items">
+                <nav class="nav">
+                    <ul class="nav__lists">
+                        <li class="nav__lists-info"><a href="./home.html" class="nav__lists-info">Home</a></li>
+                        <li class="nav__lists-info"><a href="./shop.html" class="nav__lists-info">Shop</a></li>
+                        <li class="nav__lists-info"><a href="#" class="nav__lists-info" id="nav__lists-info">About</a>
+                        </li>
+                        <li class="nav__lists-info"><a href="./contact.html" class="nav__lists-info">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header__icons">
+                    <a class="header__icons-info"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a class="header__icons-info"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a class="header__icons-info"><i class="fa-regular fa-heart"></i></a>
+                </div>
             </div>
+
         </div>
 
     </header>
@@ -99,7 +103,7 @@
     </section>
 
     <section class="stories">
-        <div class="story" >
+        <div class="story">
             <div class="story__info">
                 <h1 class="story__info-title">Our Story</h1>
                 <p class="story__info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat
@@ -116,30 +120,40 @@
                     facilisis, eu sodales lectus sagittis. Etiam pellentesque, magna vel dictum rutrum, neque justo
                     eleifend elit, vel tincidunt erat arcu ut sem. Sed rutrum, turpis ut commodo efficitur, quam velit
                     convallis ipsum, et maximus enim ligula ac ligula.</p>
-                <p class="story__info-text">Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879</p>
+                <p class="story__info-text">Any questions? Let us know in store at 8th floor, 379 Hudson St, New York,
+                    NY 10018 or call us on (+1) 96 716 6879</p>
             </div>
             <div class="story__image">
-              <div class="story__image-photo">
-                <img src="./img/about-01.jpg.webp" alt="">
-              </div>
+                <div class="story__image-photo">
+                    <img src="./img/about-01.jpg.webp" alt="">
+                </div>
             </div>
         </div>
         <div class="story">
             <div class="story__image">
                 <div class="story__image-picture">
-                <img src="./img/about-02.jpg.webp" alt="">
+                    <img src="./img/about-02.jpg.webp" alt="">
                 </div>
 
             </div>
             <div class="story__info">
                 <h1 class="story__info-title">Our Mission</h1>
-                <p class="story__info-text">Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.</p>
-                <p class="story__info-text">Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn't really do it, they just saw something. It seemed obvious to them after a while.
+                <p class="story__info-text">Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus
+                    dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et
+                    malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna
+                    gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac
+                    velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor
+                    ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi
+                    vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus
+                    maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.</p>
+                <p class="story__info-text">Creativity is just connecting things. When you ask creative people how they
+                    did something, they feel a little guilty because they didn't really do it, they just saw something.
+                    It seemed obvious to them after a while.
 
                     - Steve Job’s</p>
             </div>
         </div>
-        
+
     </section>
     <footer>
         <div class="footers">
